# http

./: .gitignore  README.md  app.js  index.html  style.css
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  start_real_server.py  test_real_server.py
backend/__tests__/: html-smoke.test.js  httpClient.test.js
backend/api/: connections-[id]-execute.js  connections-[id]-health.js  connections-[id]-test.js  connections.js  index.js  index.py  logs.js
backend/lib/: dataMapper.js  googleSheets.js  httpClient.js  storage.js  validator.js
backend/python-mcp/: .env.example  README.md  pyproject.toml  requirements.txt  server.py
merged_http2/: CSS-ARCHITECTURE.md  MIGRATION-SUMMARY.md  app.css  app.js  backend-create.js  backend-execute.js  dataMapper.js  design-system.css  http-backend-setup.md  httpClient.js  index (2).html  index.html  requirements.txt  style.css  vercel.json
merged_http2/api/: index.py
merged_http2/mcp-server/http-mcp-server/: .env  mcp_test_client.py
